exports[`test Text H1 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={true}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#0E4EF8",
        "fontFamily": "HelveticaNeue",
        "fontSize": 24.5,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 30,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text H1 with Link renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={true}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={[Function]}
  p={false}
  style={
    Array [
      Object {
        "color": "#0E4EF8",
        "fontFamily": "HelveticaNeue",
        "fontSize": 24.5,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 30,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
      Object {
        "color": "#0E4EF8",
        "textDecorationLine": "underline",
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text H2 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={true}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#0E4EF8",
        "fontFamily": "HelveticaNeue",
        "fontSize": 21,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 26,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text H3 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={true}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#0E4EF8",
        "fontFamily": "HelveticaNeue",
        "fontSize": 17.5,
        "fontWeight": "500",
        "left": 0,
        "lineHeight": 23,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text H4 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={true}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#0E4EF8",
        "fontFamily": "HelveticaNeue",
        "fontSize": 15.400000000000002,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 23,
        "margin": 0,
        "marginBottom": 4,
        "right": 0,
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text H5 renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={false}
  h5={true}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#0E4EF8",
        "fontFamily": "HelveticaNeue",
        "fontSize": 14,
        "fontWeight": "800",
        "left": 0,
        "lineHeight": 18,
        "margin": 0,
        "marginBottom": 4,
        "marginTop": 4,
        "right": 0,
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text P renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={true}
  style={
    Array [
      Object {
        "color": "#222222",
        "fontFamily": "HelveticaNeue",
        "fontSize": 14,
        "fontWeight": "500",
        "lineHeight": 18,
        "marginBottom": 8,
      },
    ]
  }>
  Hey Now...
</Text>
`;

exports[`test Text renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  h1={false}
  h2={false}
  h3={false}
  h4={false}
  h5={false}
  onPress={null}
  p={false}
  style={
    Array [
      Object {
        "color": "#222222",
        "fontFamily": "HelveticaNeue",
        "fontSize": 14,
        "fontWeight": "500",
        "lineHeight": 18,
      },
    ]
  }>
  Hey Now...
</Text>
`;
